Рекомендации по числу символов

--- a/templates/city/details.sm.html
+++ b/templates/city/details.sm.html
@@ -6,12 +6,12 @@
             <tr>
                 <td nowrap>ключевые слова</td>
                 <td colspan="3" style="width:100%"><input type="text" name="keywds" id="city_keywds" value="{$city.pc_keywords}" style="width:99%" /></td>
-                <td><span class="city_form_hint" id="city_sign_keywds"></span></td>
+                <td><span class="city_form_hint" id="city_sign_keywds" title="оптимально до 150"></span></td>
             </tr>
             <tr>
                 <td nowrap>краткое описание (до 200 знаков)</td>
                 <td colspan="3"><textarea name="descr" id="city_descr" style="width:99%">{$city.pc_description}</textarea></td>
-                <td><span class="city_form_hint" id="city_sign_descr"></span></td>
+                <td><span class="city_form_hint" id="city_sign_descr" title="обычно 150-200"></span></td>
             </tr>
             <tr>
                 <td nowrap>координаты</td>
