--- a/templates/_pages/pagecity.show.sm.html
+++ b/templates/_pages/pagecity.show.sm.html
@@ -22,7 +22,7 @@
             <table>
                 {foreach from=$city.metas item=meta}
                 <tr>
-                    <td>{$meta.cf_title}:</td>
+                    <th>{$meta.cf_title}:</th>
                     <td>{$meta.cd_value}</td>
                 </tr>
                 {/foreach}
