--- a/css/common.v2.5.css
+++ b/css/common.v2.5.css
@@ -706,6 +706,14 @@ textarea.feedinput {
 .simplewindow {
     overflow-x: hidden;
 }
+
+/* Autocomplete
+-----------------------------------------------------------------------------*/
+.autocomplete-suggestions { border: 1px solid #999; background: #FFF; cursor: default; overflow: auto; }
+.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
+.autocomplete-selected { background: #F0F0F0; }
+.autocomplete-suggestions strong { font-weight: normal; color: #3399FF; }
+
 /* M E D I A   P R I N T
 -----------------------------------------------------------------------------*/
 @media print {
