Изменение оформления админки

--- a/templates/_admin/cron.list.sm.html
+++ b/templates/_admin/cron.list.sm.html
@@ -1,7 +1,7 @@
 <img class="pageicon" src="../img/admin/ico.a_logs.gif">
 <h3>Задачи по расписанию</h3>
 
-<table id="crontable" cellpadding="1" cellspacing="1">
+<table id="crontable" cellpadding="1" cellspacing="1" style="margin:0 auto;">
     <tr>
         <th>#</th>
         <th>Название задачи</th>
