--- a/templates/_admin/refs.list.sm.html
+++ b/templates/_admin/refs.list.sm.html
@@ -1,5 +1,5 @@
 <img class="pageicon" src="../img/admin/ico.a_refs.gif">
-    <h3>Настройки сайта</h3>
+<h3>Настройки сайта</h3>
 <ul>
     {foreach from=$reflist item=ref key=rid}
     <li>
@@ -8,4 +8,11 @@
         </a>
     </li>
     {/foreach}
+</ul>
+
+<hr />
+<ul>
+    <li><a href="cron.php">Задачи по расписанию</a></li>
+    <li><a href="log_error.php">Журнал ошибок</a></li>
+
 </ul>
