Дополнительные цифры в статистике

--- a/templates/_admin/stat_yandex.sm.html
+++ b/templates/_admin/stat_yandex.sm.html
@@ -7,6 +7,7 @@
             <p><b>Города</b></p>
             <ul style="text-align:left;">
                 <li>всего: {$towns.all}</li>
+                <li>в базе: {$towns.base}</li>
                 <li>обработано: {$towns.worked}</li>
                 <li>осталось: {$towns.remain}</li>
             </ul>
