Обновленная ссылка на статистику Яндекса

--- a/templates/_admin/stat_yandex.sm.html
+++ b/templates/_admin/stat_yandex.sm.html
@@ -64,7 +64,7 @@
                     <td>{$item.region_name}</td>
                     <td>
                         <a href="/city/add/?cityname={$item.city_name}">{$item.city_name}</a>
-                        <a href="http://wordstat.yandex.ru/?cmd=words&page=1&t={$item.city_name}+достопримечательности&geo=&text_geo="><img src="/img/new-window.png" /></a>
+                        <a href="http://wordstat.yandex.ru/#!/?words={$item.city_name} достопримечательности"><img src="/img/new-window.png" /></a>
                     </td>
                     <td align="center" title="{$item.ws_weight_date}">{$item.ws_weight}</td>
                     <td align="center">
