Относительные пути к иконкам

--- a/templates/blog/admin.one.sm.html
+++ b/templates/blog/admin.one.sm.html
@@ -7,7 +7,7 @@
     });
 </script>
 {/literal}
-<img class="pageicon" src="../img/admin/ico.a_modules.gif">
+<img class="pageicon" src="/img/admin/ico.a_modules.gif">
 <h3>Управление записями в блоге</h3>
 <form method="post">
     <table id="usertable" cellspacing="1" width="80%">
