--- a/templates/blog/blog.one.sm.html
+++ b/templates/blog/blog.one.sm.html
@@ -1,9 +1,9 @@
 <div class="blog_record">
     <h2 class="blog_title">{$entry.br_title}</h2>
     <div class="blog_attrs">
-        <img src="../../../img/ico/ico.calendar.gif" class="textmarker" />&nbsp;
+        <img src="/img/ico/ico.calendar.gif" class="textmarker" />&nbsp;
         {$entry.bg_datex},&nbsp;{$entry.us_name}
     </div>
     {$entry.br_text}
 </div>
-<p>Перейти: <a href="../../../blog/{$entry.bg_year}/">этот год</a>, <a href="../../../blog/{$entry.bg_year}/{$entry.bg_month}/">этот месяц</a></p>
+<p>Перейти: <a href="/blog/{$entry.bg_year}/">этот год</a>, <a href="/blog/{$entry.bg_year}/{$entry.bg_month}/">этот месяц</a></p>
