--- a/templates/blog/blog.all.sm.html
+++ b/templates/blog/blog.all.sm.html
@@ -11,8 +11,8 @@
     <h2 class="blog_title">
         <a href="/blog/{$entry.bg_year}/{$entry.bg_month}/{$entry.bg_day}.html">{$entry.br_title}</a>
         {if $blogadmin == true}
-        <a href="#" class="blog_entry_edit" id="blog_edit_{$entry.br_id}" title="редактировать запись"><img src="../../img/btn/btn.edit.png" /></a>
-        <a href="#" class="blog_entry_delete" id="blog_delete_{$entry.br_id}" title="удалить запись"><img src="../../img/btn/btn.delete.png" /></a>
+        <a href="#" class="blog_entry_edit" id="blog_edit_{$entry.br_id}" title="редактировать запись"><img src="/img/btn/btn.edit.png" /></a>
+        <a href="#" class="blog_entry_delete" id="blog_delete_{$entry.br_id}" title="удалить запись"><img src="/img/btn/btn.delete.png" /></a>
         {/if}
     </h2>
     <div class="blog_attrs">
