Выбор года вверху (отключен)

--- a/templates/blog/blog.calendar.sm.html
+++ b/templates/blog/blog.calendar.sm.html
@@ -1,7 +1,7 @@
 <!--
 <div id="blog_years">
     {foreach from=$years item=year}
-    <a href="blog/{$year}/">{$year}</a>&nbsp;|
+    <a href="/blog/{$year}/">{$year}</a>&nbsp;|
     {/foreach}
 </div>
 -->
