nofollow для ссылок на авторизацию

--- a/templates/_main/main.html.sm.html
+++ b/templates/_main/main.html.sm.html
@@ -58,7 +58,7 @@
                                         <input type="text" id="search_mainform_q" name="q" value="" placeholder="Поиск" />
                                     </form>
                                 </li>
-                                <li><a id="show_auth_form" href="/sign/in/" title="Вход">&#x25bc;</a></li>
+                                <li><a id="show_auth_form" href="/sign/in/" title="Вход" rel="nofollow">&#x25bc;</a></li>
                             </ul>
                         </header><!-- #header-->
                         <div id="content">
